tests/syntax_error/too_many_closing_parens.jou
def foo() -> None:
    bar(1))  # Error: ')' without a matching '('
